--- a/AS04_Data-Manipulation-Joining.Rmd
+++ b/AS04_Data-Manipulation-Joining.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "AS04_Data-Manipulation-Joining"
-author: "你是誰 R09342000 新聞所碩五"
-date: "2021/03/23"
+author: "黃詩博 B07701111 工管三"
+date: "2021/03/24"
 output:
   html_document:
     number_sections: no
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(echo = TRUE, results = 'hold', comment = '#>', error = TRU
 ```{r message=FALSE, warning=FALSE}
 ### 這邊不要動
 library(tidyverse)
-df_education_raw <- read_csv("data/AS04/opendata107Y020.csv")
+df_education_raw <- read_csv("data/AS04/opendata107Y020.csv") 
 ### 給你看資料長這樣
 df_education_raw %>% glimpse()
 ```
@@ -53,7 +53,10 @@ df_education <- df_education_raw %>%
 
 ```{r message=FALSE, warning=FALSE}
 ### your code
+df_education_long <- df_education%>%
+  gather("key", "value", 4:ncol(.)) 
 
+df_education_long
 ### your result should be
 #> # A tibble: 356,960 x 5
 #>    district_code site_id      village key                        value
@@ -84,7 +87,7 @@ df_education <- df_education_raw %>%
 
 ```{r message=FALSE, warning=FALSE}
 ### 這邊讓你看 key 的長相
-# df_education_long %>% count(key)
+df_education_long %>% count(key)
 
 ### count 結果借你看
 #> # A tibble: 46 x 2
@@ -103,8 +106,15 @@ df_education <- df_education_raw %>%
 #> # … with 36 more rows
 
 ### your code
+df_education_long_cut <- df_education_long %>%
+  mutate(key = str_replace(key, "illiterate", "illiterate_all")) %>%
+  mutate(key = str_replace(key, "selftaughtl", "selftaughtl_all")) %>%
+  mutate(key = str_replace(key, "juniorcollege_2ys", "juniorcollege2ys")) %>%
+  mutate(key = str_replace(key, "juniorcollege_5ys_final2y", "juniorcollege5ysfinal2y")) %>%
+  mutate(key = str_replace(key, "juniorcollege_5ys_first3y", "juniorcollege5ysfirst3y")) %>%
+  separate(key, c("edu", "level", "edu_status", "gender"))
 
-
+df_education_long_cut
 ### your result should be
 #> # A tibble: 356,960 x 8
 #>    district_code site_id      village edu   level      graduate    gender value
@@ -129,7 +139,17 @@ df_education <- df_education_raw %>%
 
 ```{r message=FALSE, warning=FALSE}
 ### your code
+df_education_agg <- df_education_long_cut %>%
+  group_by(site_id) %>%
+  summarize(n_sum = sum(value),
+            n_female = sum(value[gender == "f"]),
+            n_higher = sum(value[level == c("doctor", "master", "university")]),
+            n_higher_female = sum(value[level == c("doctor", "master", "university") & gender == "f"]),
+            n_self = sum(value[level == "selftaughtl"]),
+            n_illiterate = sum(value[level == "illiterate"])) %>%
+  ungroup()
 
+df_education_agg
 ### your result should be
 #> # A tibble: 370 x 7
 #>    site_id      n_sum n_female n_higher n_higher_female n_self n_illiterate
@@ -168,7 +188,25 @@ ref10 <- read_csv("data/AS04/ref10_town.csv") %>%
   drop_na(site_id) %>% select(site_id, everything())
 
 ### your code
+df_ref_edu_join <- df_education_long_cut %>%
+  mutate(site_id = str_replace(site_id, "三民一|三民二", "三民區")) %>%
+  mutate(site_id = str_replace(site_id, "鳳山一|鳳山二", "鳳山區")) %>%
+  group_by(site_id) %>%
+  summarize(n_sum = sum(value),
+            n_female = sum(value[gender == "f"]),
+            n_higher = sum(value[level == c("doctor", "master", "university")]),
+            n_higher_female = sum(value[level == c("doctor", "master", "university") & gender == "f"]),
+            n_self = sum(value[level == "selftaughtl"]),
+            n_illiterate = sum(value[level == "illiterate"])) %>%
+  ungroup() %>%
+  mutate(site_id = str_replace(site_id, "東　區", "東區")) %>%
+  mutate(site_id = str_replace(site_id, "西　區", "西區")) %>%
+  mutate(site_id = str_replace(site_id, "南　區", "南區")) %>%
+  mutate(site_id = str_replace(site_id, "北　區", "北區")) %>%
+  mutate(site_id = str_replace(site_id, "中　區", "中區")) %>%
+  left_join(ref10, by = "site_id") 
 
+df_ref_edu_join 
 ### your result should be
 #> # A tibble: 368 x 13
 #>    site_id     n_sum n_female n_higher n_higher_female n_self n_illiterate agree
@@ -193,10 +231,17 @@ ref10 <- read_csv("data/AS04/ref10_town.csv") %>%
 
 ```{r}
 ### your code
-
+df_ref_edu_join %>%
+  mutate(agreeRate = agree / legalVote) %>%
+  mutate(per_higher = n_higher / n_sum) %>%
+  ggplot() +
+  aes(x = per_higher, y = agreeRate) +
+  geom_jitter(alpha = 0.3, color = "red") +
+  theme_light()
 ### your result should be
 # 自己畫就好唷
 
 ### your text
+"從圖中可以看出，高學歷的比例越高在公投投下同意票的比例越低，per_higher和agree_Rate明顯呈現負相關。"
 # 記得寫你的詮釋！！！
 ```
